2008-07-14  Martyn Russell  <martyn@imendio.com>

	* src/trackerd/tracker-daemon.c: (tracker_daemon_get_services),
	(tracker_daemon_get_stats): Small code clean ups.

2008-07-04  Ivan Frade  <ivan.frade@nokia.com>

	* src/tracker-indexer/tracker-index.c
	* tests/tracker-indexer/tracker-index-test.c: Added "remove"
	functionality in the indexer including unit tests. Delete a word
	from a document means to add the word with weight = -1.

2008-07-04  Philip Van Hoof  <pvanhoof@gnome.org>

	* src/trackerd/tracker-daemon.c: Error handling for some DBus Apis

2008-07-04  Ivan Frade  <ivan.frade@nokia.com>

	* data/dbus/tracker-daemon.xml
	* src/trackerd/tracker-daemon.[ch]: Tracker daemon dbus API is now 
	async.
	
2008-07-04  Martyn Russell  <martyn@imendio.com>

	* src/trackerd/tracker-crawler.c: Don't check if the indexer is
	running first, just send files. Also, don't send the next batch
	until the last patch was sent successfully. Make sure we add files
	back onto the queue if they couldn't be sent.

2008-07-04  Ivan Frade  <ivan.frade@nokia.com>

	* src/libtracker-db/tracker-db-dbus.c: 
	(tracker_dbus_query_result_to_hash_table): Fixed warning caused by
	uninitialized GValues.
	
2008-07-04  Martyn Russell  <martyn@imendio.com>

	* src/trackerd/tracker-main.c: (check_runtime_level): Fixed this
	function so it sets the daemon to readonly mode depending on
	battery use + config and if there is a reindex needed.

2008-07-04  Martyn Russell  <martyn@imendio.com>

	* src/trackerd/tracker-main.c: (main): Make the message clearer as
	to why we are not running the crawler/indexer when in read only mode.

2008-07-04  Martyn Russell  <martyn@imendio.com>

	* src/libtracker-common/tracker-hal.h: Define TrackerHal as a void
	pointer if it is disabled and just don't use it anywhere, this is
	so function signatures can include it but it will be NULL where it
	is called. Can't think of a better way to do this really.
	
	* src/trackerd/tracker-crawler.[ch]: